# DragonAI

./: README.md  flutter-apk.yml  pubspec.yaml
.github/workflows/: build-adaptiveassistant.yml  build_apk.yml  flutter-apk.yml
AdaptiveAssistant/: README.md  analysis_options.yaml  pubspec.yaml
AdaptiveAssistant/android/: build.gradle  gradle.properties  settings.gradle
AdaptiveAssistant/android/app/: build.gradle  proguard-rules.pro
AdaptiveAssistant/android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
AdaptiveAssistant/assets/porcupine/: Dragon_en_android_v4_0_0.ppn  README.txt
AdaptiveAssistant/lib/: app.dart  main.dart
AdaptiveAssistant/lib/core/assistant/: assistant_controller.dart
AdaptiveAssistant/lib/core/dialogue/: dialogue_manager.dart
AdaptiveAssistant/lib/core/intents/: intent_parser.dart  skill_engine.dart
AdaptiveAssistant/lib/core/learning/: learned_matcher.dart  training_store.dart
AdaptiveAssistant/lib/core/ml/: cloud_llm_service.dart  local_llm_service.dart
AdaptiveAssistant/lib/core/models/: app_settings.dart  assistant_state.dart  intent.dart  (+1 more)
AdaptiveAssistant/lib/widgets/: assistant_pill.dart
android/: local.properties
android/app/: build.gradle.kts
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+29 files in other folders)
